--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.9.25'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.0'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.0'
 }
 
 repositories {
@@ -9,4 +9,13 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1")
+    testImplementation 'io.kotest:kotest-runner-junit5:5.9.0'
+    testImplementation 'io.kotest:kotest-assertions-core:5.9.0'
+    testImplementation 'io.kotest:kotest-property:5.9.0'
 }
+
+test {
+    useJUnitPlatform()
+}
+
